--- a/alembic.ini
+++ b/alembic.ini
@@ -59,7 +59,8 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = driver://user:pass@localhost/dbname
+sqlalchemy.url = postgresql://postgres_container:postgres_container@172.18.0.2:5432/postgres
+
 
 
 [post_write_hooks]
